# AI-on-the-edge-device

./: .clang-format  .gitmodules  Changelog.md  README.md
.github/workflows/: build.yaml  clear_cache.yaml  manual-update-contributors-list.yaml  manual-update-webinstaller.yaml
code/: .gitignore  partitions.csv  partitions_esp32.csv  partitions_esp32s3.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32cam.defaults  sdkconfig.esp32s3-eth-v2.defaults  sdkconfig.esp32s3-eth.defaults  sdkconfig.freenove-esp32s3.defaults  sdkconfig.wrover-kit-esp32.defaults
code/components/jomjol_configfile/: CMakeLists.txt  configFile.cpp  configFile.h
code/components/jomjol_fileserver_ota/: CMakeLists.txt  minizip.c  minizip.h  server_file.cpp  server_file.h  server_help.cpp  server_help.h  server_ota.cpp  server_ota.h
code/include/: defines.h
code/main/: CMakeLists.txt  main.cpp  server_main.cpp  server_main.h  softAP.cpp  softAP.h  version.h
param-docs/: expert-params.txt
sd-card/: network.ini  wlan.ini
sd-card/config/: config.ini
sd-card/demo/: config.ini
sd-card/html/: backup.html  common.js  data.html  data_export.html  edit_alignment.html  edit_analog.html  edit_config_raw.html  edit_config_template.html  edit_digits.html  edit_explain_0.html  edit_explain_7.html  edit_explain_7_abort.html  edit_reference.html  edit_style.css  edit_wlan_config.html  file_server.js  graph.html  index.html  info.html  ipInput.min.css  log.html  ota_page.html  overview.html  prevalue_set.html  readconfigcommon.js  readconfigparam.js  reboot_page.html  setup.html
(+127 files in other folders)
